cmake_minimum_required(VERSION 3.29)
project(cAlgorithm C)

set(CMAKE_C_STANDARD 17)

# 인코딩 옵션을 추가하여 UTF-8을 지원
add_compile_options(-finput-charset=UTF-8 -fexec-charset=UTF-8)

add_executable(cAlgorithm
#        0_for_testing.c
#        1_main.c
#        2_find_consecutive_sum_ways.c
#        3_dice_roll_summary.c
#        4_delete_element.c
#        5_theater_reservation_system.c
#        6_random_walk.c
#        7_prepare_midterm_exam.c
#        8_remove_extra_spaces.c
#        9_remove_vowels.c
#        10_is_strong_password.c
#        11_trim_left.c
#        12_is_palindrome.c
        13_employee_struct.c
#        14_product_managing.c
)